tlv: add path-addressed TLV construction/editing and adopt the high-level API